Add new lines in Sql review